syntax = "proto3";

package skysign_proto;

option java_package = "proto.skysign.event";
option java_multiple_files = true;
option go_package = ".;skysign_proto";

message CommunicationIdGaveEvent {
    string communicationId = 1;
    string vehicleId = 2;
    string version = 3;
}

message CommunicationIdRemovedEvent {
    string communicationId = 1;
    string version = 2;
}

message FlightplanCreatedEvent {
    string flightplan_id = 1;
}

message FlightplanDeletedEvent {
    string flightplan_id = 1;
}